# michi

./: MODEL_ARCHITECTURE.md  main.py  main.tex  model_evaluation.py  pyproject.toml
checkpoints/: model_best.pt
data/: astana_seed7_35d_15m_all.csv  astana_seed7_35d_15m_bottom.csv  astana_seed7_60d_15m_all.csv  astana_seed7_60d_15m_bottom.csv
implementations/: DEEPSEEK.md  GPT.md  GPT_2.md  KIMI.md  QWEN.md
model_eval_q1_full/: ablations_summary.json  online_ablations.json  run_state.json
model_eval_q1_full/checkpoints/: dcrnn.pt
outputs/model_eval_20260114_154427/: metrics_summary.json  metrics_test_full.csv  metrics_test_h1.csv  metrics_val_full.csv  metrics_val_h1.csv  run_state.json
outputs/model_eval_20260114_154427/checkpoints/: dts_gssf.pt
outputs/model_eval_20260114_154427/datasets/: dataset_test.csv  dataset_train.csv  dataset_val.csv
outputs/model_eval_q1_fast/: metrics_summary.json  metrics_test_full.csv  metrics_test_h1.csv  metrics_val_full.csv  metrics_val_h1.csv  run_state.json
outputs/model_eval_q1_fast/checkpoints/: dcrnn.pt  dts_gssf.pt
outputs/model_eval_q1_fast/datasets/: dataset_test.csv
outputs/model_eval_q1_full/: ablations_summary.json  online_ablations.json  run_state.json
outputs/model_eval_q1_full/checkpoints/: dts_gssf.pt
outputs/model_eval_q1_full/datasets/: dataset_val.csv
researches/: CLAUDE.md  DEEPSEEK.md  GLM.md  GPT.md  KIMI.md  PREPLEXITY.md
