[project]
name = "michi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "watchdog>=6.0.0",
    "xgboost>=3.1.3",
]
